--- a/src/components/molecules/Footer/style.css
+++ b/src/components/molecules/Footer/style.css
@@ -18,7 +18,7 @@
   background-color: var(--background-color-2);
   box-shadow: 0px -2px 1px -1px rgba(0, 0, 0, 0.2);
 
-  transition: 0.75s ease-in-out;
+  transition: background-color 500ms ease-in-out;
 }
 
 .Footer__Items {
